plugins {
    id 'java'
    id 'maven-publish'
    id 'com.gradleup.shadow' version '8.3.0'
    id("io.freefair.lombok") version "8.14"
}

group = 'net.exylia'
version = '1.0.0'

repositories {
    mavenLocal()
    mavenCentral()

    maven { url 'https://repo.papermc.io/repository/maven-public/' }
    maven { url = uri("https://repo.opencollab.dev/main/") }
    maven { url 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
    maven { url "https://maven.enginehub.org/repo/" }
    maven { url "https://repo.dmulloy2.net/repository/public/" }
    maven { url "https://repo.codemc.org/repository/maven-public/" }
    maven { url "https://maven.devs.beer/" }
    maven { url 'https://repo.rosewooddev.io/repository/public/' }
    maven { url 'https://repo.william278.net/releases' }
    maven { url 'https://jitpack.io' }

    maven {
        name = "minecraft-libraries"
        url = uri("https://libraries.minecraft.net")
    }

    maven {
        name = "roinujnosde-repo"
        url = uri("https://repo.roinujnosde.me/releases/")
    }

    maven {
        name = 'feather-repo'
        url = uri('https://repo.feathermc.net/artifactory/maven-releases')
    }

    maven {
        name = 'lunarclient'
        url = uri('https://repo.lunarclient.dev')
    }

    exclusiveContent {
        forRepository {
            maven { url = uri('https://dependency.download/releases') }
        }
        filter {
            includeGroup("dev.kitteh")
        }
    }

    exclusiveContent {
        forRepository {
            maven { url = uri("https://repository.minecodes.pl/releases") }
        }
        filter {
            includeGroup("me.chancesd.pvpmanager")
        }
    }

    exclusiveContent {
        forRepository {
            maven { url = uri("https://raw.githubusercontent.com/RunithMC/maven/main/") }
        }
        filter {
            includeGroup("net.runith")
        }
    }
}

dependencies {
    implementation project(':clans-api')

    compileOnly 'com.zaxxer:HikariCP:5.1.0'
    compileOnly 'org.xerial:sqlite-jdbc:3.45.2.0'
    compileOnly 'mysql:mysql-connector-java:8.0.33'
    compileOnly 'io.papermc.paper:paper-api:1.20.4-R0.1-SNAPSHOT'
    compileOnly 'me.clip:placeholderapi:2.12.2'
    compileOnly 'redis.clients:jedis:5.1.0'
    compileOnly 'org.apache.commons:commons-pool2:2.12.0'
    compileOnly 'org.slf4j:slf4j-api:2.0.9'
    compileOnly 'org.slf4j:slf4j-simple:2.0.9'
    compileOnly 'com.mojang:authlib:1.5.25'

    compileOnly 'net.kyori:adventure-api:4.25.0'
    compileOnly 'net.kyori:adventure-platform-bukkit:4.4.1'
    compileOnly 'net.kyori:adventure-text-minimessage:4.25.0'
    compileOnly 'net.kyori:adventure-text-serializer-legacy:4.25.0'

    compileOnly 'org.mongodb:mongodb-driver-sync:4.11.0'

    compileOnly('com.github.MilkBowl:VaultAPI:1.7') {
        exclude group: 'org.bukkit'
        exclude group: 'org.spigotmc'
    }

    compileOnly 'com.fastasyncworldedit:FastAsyncWorldEdit-Core:2.8.4'
    compileOnly 'com.fastasyncworldedit:FastAsyncWorldEdit-Bukkit:2.8.4'
    compileOnly 'com.sk89q.worldguard:worldguard-bukkit:7.0.7'
    compileOnly("com.github.retrooper:packetevents-spigot:2.13.0")
    compileOnly 'com.github.ben-manes.caffeine:caffeine:3.2.2'
    compileOnly 'com.google.inject:guice:7.0.0'
    compileOnly 'dev.lone:api-itemsadder:4.0.10'

    implementation 'com.github.lalyos:jfiglet:0.0.9'

    compileOnly 'de.exlll:configlib-yaml:4.8.0'
    compileOnly 'com.lukittu.loader:lukittu-common:v1.0.10-local'
    compileOnly 'com.lukittu.loader:lukittu-spigot:v1.0.10-local'

    compileOnly 'com.github.UlrichBR:UClans-API:8.15.6'
    compileOnly "net.sacredlabyrinth.phaed.simpleclans:SimpleClans:2.19.2"

    compileOnly('com.github.cryptomorin:kingdoms:1.17.18.1-BETA') {
        transitive = false
    }

    compileOnly 'dev.kitteh:factions:4.4.0'
    compileOnly 'net.william278.husktowns:husktowns-bukkit:3.1.4'
    compileOnly "net.runith:clans-api:1.6.0"

    compileOnly files('libs/ZelTeams-3.3.3.jar')
    implementation files('libs/ExyliaClans-API-1.0.0.jar')

    compileOnly 'com.github.timderspieler:DeluxeCombat-API:1.5.1'
    compileOnly 'me.chancesd.pvpmanager:pvpmanager:4.0.4'
    compileOnly 'org.black_ixx:playerpoints:3.2.7'
    compileOnly 'com.github.NEZNAMY:TAB-API:5.5.0'

    compileOnly 'com.lunarclient:apollo-api:1.2.4'
    compileOnly 'com.lunarclient:apollo-extra-adventure4:1.2.4'
    compileOnly 'net.digitalingot.feather-server-api:api:0.0.5'

    compileOnly 'org.geysermc.geyser:api:2.9.5-SNAPSHOT'
    compileOnly 'org.geysermc.floodgate:api:2.2.5-SNAPSHOT'
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
    repositories {
        mavenLocal()
    }
}

shadowJar {
    archiveClassifier.set('')
}

build {
    dependsOn shadowJar
}